--- a/helloworld.yml
+++ b/helloworld.yml
@@ -5,4 +5,4 @@
   tasks:
  
   - name: Hello World!
-    shell: curl -k https://815d-49-37-161-212.ngrok-free.app/ping
+    shell: curl -k https://test.chatops.kyndryl.net/ping
