--- a/helloworld.yml
+++ b/helloworld.yml
@@ -5,4 +5,4 @@
   tasks:
   - debug: msg="{{ foo }}"
   - name: Hello World!
-    shell: curl -k https://test.chatops.kyndryl.net/ping
+    shell: curl -k "https://{{url}}/ping"
