--- a/helloworld.yml
+++ b/helloworld.yml
@@ -4,6 +4,7 @@
  
   tasks:
   - name: Hello World!
-    shell: curl --k "https://{{ url }/api/v2/postMessage" --header 'Content-Type: application/json' --header 'X-Chatops-Source-Id: "{{ sourceId }}"' --header 'X-Chatops-Source-Api-Token: "{{ apiToken }}"' --header 'X-Transaction-Id: postmessage101' --data-raw '{ "workspaceName": "chatops-dev", "message": {"text":"Posting message on dev - test 16 Nov"},"channelId": "19:71d6b5cb5679411bb59980e4784d5984@thread.tacv2"}'
+    command:  curl -k -X POST -H "Content-Type:application/json"  -H 'X-Chatops-Source-Api-Token: "{{ apiToken }}"' -H 'X-Chatops-Source-Id: "{{ sourceId }}"' --data '{"workspaceName": "chatops-dev", "message": {"text":"Posting message on dev - test 16 Nov"},"channelId": "19:71d6b5cb5679411bb59980e4784d5984@thread.tacv2"}' "https://{{ url }}/api/v2/postMessage"
+
     # shell: curl -k "https://{{ url }}/api/v2/postMessage" --header 'Content-Type: application/json' --header "X-Chatops-Source-Id: {{ sourceId }}" --header "X-Chatops-Source-Api-Token: {{ apiToken }}" --header 'X-Transaction-Id: postmessage101' --data-raw '{ "workspaceName": "{{ workspaceName }}", "message": {"text":"Posting message on dev - test 16 Nov"},"channelId": "{{ channelId }}"}'
 
