--- a/helloworld.yml
+++ b/helloworld.yml
@@ -6,7 +6,7 @@
   # shell: curl -k "https://{{ url }}/api/v2/postMessage" --header 'Content-Type: application/json' --header 'X-Chatops-Source-Id: "{{ sourceId }}"' --header 'X-Chatops-Source-Api-Token: "{{ apiToken }}"' --header 'X-Transaction-Id: postmessage101' --data-raw '{ "workspaceName": "'"{{ workspaceName }}"'", "message": {"text":"'"{{ message }}"'"},"channelId": "'"{{ channelId }}"'"}'
   - name: post to chatops
     uri:
-      url: https://"{{ url }}"/api/v2/postMessage
+      url: https://{{ url }}/api/v2/postMessage
       method: POST
       body: '{"text":"{{ message }}"},"channelId": "{{ channelId }}"}'
       body_format: json
