--- a/helloworld.yml
+++ b/helloworld.yml
@@ -12,6 +12,7 @@
       body_format: json
       headers:
         Content-Type: "application/json"
+        user-agent : "chatops"
         X-Chatops-Source-Id: "{{ sourceId }}"
         X-Chatops-Source-Api-Token: "{{ apiToken }}"
         X-Transaction-Id: "postmessage101"
