--- a/helloworld.yml
+++ b/helloworld.yml
@@ -8,7 +8,7 @@
     uri:
       url: https://{{ url }}/api/v2/postMessage
       method: POST
-      body: '{"text":"{{ message }}","channelId": "{{ channelId }}"}'
+      body: '{"message":"{{ message }}","channelId": "{{ channelId }}","collabPlatform": "TEAMS","workspaceName": "{{ workspaceName }}"}'
       body_format: json
       headers:
         Content-Type: "application/json"
