--- a/sample.yml
+++ b/sample.yml
@@ -4,6 +4,6 @@
  
   tasks:
   - name: Hello World!
-    shell: echo "Hi! Tower is working."
+    shell: echo "Health check is successfull."
   
         
