--- a/helloworld.yml
+++ b/helloworld.yml
@@ -4,6 +4,7 @@
  
   tasks:
   # shell: curl -k "https://{{ url }}/api/v2/postMessage" --header 'Content-Type: application/json' --header 'X-Chatops-Source-Id: "{{ sourceId }}"' --header 'X-Chatops-Source-Api-Token: "{{ apiToken }}"' --header 'X-Transaction-Id: postmessage101' --data-raw '{ "workspaceName": "'"{{ workspaceName }}"'", "message": {"text":"'"{{ message }}"'"},"channelId": "'"{{ channelId }}"'"}'
+    shell: echo "Analysing ssl certs"
   - name: post to chatops
     uri:
       url: https://{{ url }}/api/v2/postMessage
@@ -22,6 +23,7 @@
     pause:
       seconds: 3
       
+    shell: echo "ssl certs upgrade successfull."  
   - name: post to chatops2
     uri:
       url: https://{{ url }}/api/v2/postMessage
